c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/extra_credit/label_loop_body.c
// a loop body may be a labeled statement
int main(void) {
    int result = 0;
    goto label;
    while (0)
    label: { result = 1; }

    return result;
}