c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/extra_credit/duplicate_label_in_loop.c
int main(void) {
    do {
        // make sure our label-validation analysis also traverses loop bodies
    lbl:
        return 1;
    lbl:
        return 2;
    } while (1);
    return 0;
}